feat: add english word controller to capitalise english words as needed
